# OTA_S3_P5

./: .clangd  partitions.csv  sdkconfig
main/: CMakeLists.txt  clock_display.cpp  clock_display.h  main.cpp
